# docx_to_daisy

./: .gitignore  Dockerfile  MANIFEST.in  README.md  TECHNICAL_GUIDE.md  diff.py  docker-compose.yml  pyproject.toml
epub3_guide/: TTAK.KO-10.0905_Part1.md
src/docx_to_daisy/: __init__.py  api.py  cli.py  events.py  markers.py  redis_client.py  run_api.py  tasks.py  websocket.py  worker.py
src/docx_to_daisy/converter/: daisyToepub.py  docxTodaisy.py  docxToepub.py  utils.py  validator.py
