[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-to-daisy"
version = "0.1.0"
description = "CLI tool to convert DOCX files to DAISY format (DTBook XML + optional audio)"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-docx",
    "lxml",
    "pyttsx3"
]

[project.scripts]
docx-to-daisy = "docx_to_daisy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["docx_to_daisy"]

[tool.uv]