[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-to-daisy"
version = "0.1.0"
description = "CLI tool to convert DOCX files to DAISY format (DTBook XML + optional audio)"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-docx",
    "lxml",
    "pyttsx3",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "redis>=4.5.0",
    "rq==1.10.1",
    "websockets>=11.0.0",
    "psutil>=5.9.0"
]

[project.scripts]
docx-to-daisy-api = "docx_to_daisy.run_api:main"
docx-to-daisy-worker = "docx_to_daisy.worker:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["docx_to_daisy"]
include-package-data = true

[tool.uv]